--- a/component/languages/site/en-GB.com_admirorgallery.ini
+++ b/component/languages/site/en-GB.com_admirorgallery.ini
@@ -61,3 +61,72 @@ GALLERY ADDED:=Gallery added:
 CANNOT WRITE GALLERY LISTING:=Cannot write gallery listing:
 GALLERY ALREADY EXISTS:=Gallery already exists:
 NO FOLDER SELECTED.=No folder selected.
+
+
+#Back-End Button
+AG_FOLDERS=Folders
+AG_PARAMETERS=Parametes
+
+
+# Plugin Params
+BASIC SETTINGS=<b>BASIC SETTINGS</b>
+IMAGES ROOT FOLDER=Images Root Folder
+IMAGES ROOT FOLDER DESC=Set the path to the folder you keep your images, relative to your site root. Default value is /images/stories/.
+THUMBNAIL WIDTH=Thumbnail Width
+THUMBNAIL WIDTH DESC=Adjust the maximum width thumbnail width in pixels.
+THUMBNAIL HEIGHT=Thumbnail Height
+THUMBNAIL HEIGHT DESC=Adjust the maximum image thumbnail height in pixels.
+THUMBNAIL AUTO SIZE=Thumbnail Auto Size
+THUMBNAIL AUTO SIZE DESC=Auto size for one of dimensions, keeping proportions of original image.
+WIDTH=Width
+HEIGHT=Height
+NONE=None
+GALLERY TEMPLATE=Gallery Template
+GALLERY TEMPLATE DESC=Select Gallery Template.
+POPUP ENGINE=Popup Engine
+POPUP ENGINE DESC=Select Popup Engine.
+ARRANGE IMAGES BY=Arrange Images by
+ARRANGE IMAGES BY DESC=Select one of image arrange algorithm.
+PRIORITY=Priority
+DATE=Date
+NAME=Name
+GALLERY COLORS=<b>GALLERY COLORS</b>
+GALLERY BACKGROUND COLOR=Background Color
+GALLERY BACKGROUND COLOR DESC=This color is used for background in some templates. Enter 6 digit hex code only.
+GALLERY FOREGROUND COLOR=Foreground Color
+GALLERY FOREGROUND COLOR DESC=This color is used for borders and texts in some templates. Enter 6 digit hex code only.
+GALLERY HIGHLITE COLOR=Highlite Color
+GALLERY HIGHLITE COLOR DESC=This color is used for hover highlite in some templates. Enter 6 digit hex code only.
+GALLERY FRAME SIZE=<b>GALLERY FRAME SIZE</b>
+GALLERY FRAME WIDTH=Frame Width
+GALLERY FRAME WIDTH DESC=Adjust gallery frame width in pixels.
+GALLERY FRAME HEIGHT=Frame Height
+GALLERY FRAME HEIGHT DESC=Adjust gallery frame height in pixels.
+NEW IMAGES SETTINGS=<b>NEW IMAGES</b>
+MARK NEW IMAGES=Mark New Images
+MARK NEW IMAGES DESC=Adding small tag on image thumbnails for images old one week.
+YES=Yes
+NO=No
+NEW IMAGE DAYS LIMIT=New Image Days Limit
+NEW IMAGE DAYS LIMIT DESC=Set number of days for which image is consider as new.
+
+PAGINATION SETTINGS=<b>PAGINATION SETTINGS</b>
+USE PAGINATION=Use Pagination
+USE PAGINATION DESC=Activate pagination system. It filter current set of images and generate pagination links.
+IMAGES PER GALLERY=Images Per Gallery
+IMAGES PER GALLERY DESC=Enter number of images per single gallery.
+
+ALBUMS SETTINGS=<b>ALBUMS SETTINGS</b>
+USE ALBUMS=Use Albums
+USE ALBUMS DESC=Activate albums system. It filter child folders for current gallery and render them as albums with images.
+
+
+ADDITIONAL SETTINGS=<b>ADDITIONAL SETTINGS</b>
+SHOW SIGNATURE=Show Signature
+SHOW SIGNATURE DESC=Show Admiror Gallery label on bottom of the page which using this plugin.
+USE PLAIN TEXT CAPTIONS=Plain Text Captions
+USE PLAIN TEXT CAPTIONS DESC=It's possible to use rich text captions, but avoid using double qoutes in tag attributes. There is a risk that some Templates or Popups doesn't support rich text captions.
+IGNORE INVALID IMAGE=Ignore invalid image
+IGNORE INVALID IMAGE DESC=Ignores errors if image is corrupted.
+IGNORE NOTICE OF RECOVERABLE ERRORS=Ignore notice of recoverable errors
+IGNORE NOTICE OF RECOVERABLE ERRORS DESC=If you get Notice: imagecreatefromjpeg() [function.imagecreatefromjpeg] you can stop this notice from appering on your page.
