Copy and Move action added, Fixed version numbering (still searching for better solution, ideas needed), lang files updated, css changed.

--- a/component/languages/admin/en-GB.com_admirorgallery.ini
+++ b/component/languages/admin/en-GB.com_admirorgallery.ini
@@ -96,12 +96,14 @@ NO DESCRITION=No Descrition
 GALLERIES=Galleries
 LEGEND=Legend
 CURRENT FOLDER:=Current Folder:
+OPERATION WITH SELECTED ITEMS:=Operation With Selected Items:
+AG_NONE=None
 UPLOAD IMAGES (JPG, JPEG, GIF, PNG OR ZIP)=Upload images (jpg, jpeg, gif, png or zip)
 MAX=Max
 CREATE FOLDERS:=Create folders:
 ADD=Add
-SELECT TO REMOVE FILE OR FOLDER.=Select to remove file or folder.
-SELECT FOLDER TO BOOKMARK IT IN THE LIST OF GALLERIES.=Select folder to bookmark it in the list of galleries.
+SELECTED ITEMS WILL BE DELETED!=Selected items will be deleted!
+SELECT FILE OR FOLDER.=Select File Or Folder.
 IMAGE HAS THUMBNAIL CREATED.=Image has thumbnail created.
 IMAGE HAS ADDITIONAL DETAILS SAVED.=Image has additional details saved.
 IMG WIDTH=Width
@@ -134,6 +136,10 @@ CAPTIONS REMOVED FROM IMAGE DETAILS FILE.=Captions removed from Image Details fi
 CANNOT REMOVE CAPTIONS FROM IMAGE DETAILS FILE.=Cannot remove captions from Image Details file.
 NO IMAGE DETAILS FILE FOUNDED:=No Image Details file founded:
 NO IMAGE SELECTED.=No image selected.
+ITEM COPIED:=Item Copied:
+CANNOT COPY ITEM:=Cannot Copy Item:
+ITEM MOVED:=Item Moved:
+CANNOT MOVED ITEM:=Cannot Moved Item:
 ITEM DELETED:=Item deleted:
 CANNOT DELETE ITEM:=Cannot delete item:
 ITEM DELETED:=Item deleted:
