Navigation buttons added in image manager, translation updated, button updated

--- a/component/languages/admin/en-GB.com_admirorgallery.ini
+++ b/component/languages/admin/en-GB.com_admirorgallery.ini
@@ -93,6 +93,10 @@ UNKNOWN VERSION=Unknown version
 NO DESCRITION=No Descrition
 
 #Image Manager
+SHOW SIDEBAR=Show Sidebar
+HIDE SIDEBAR=Hide Sidebar
+PREVIOUS IMAGE=Previous Image
+NEXT IMAGE=Next Image
 GALLERIES=Galleries
 LEGEND=Legend
 CURRENT FOLDER:=Current Folder:
