--- a/component/languages/site/en-GB.com_admirorgallery.ini
+++ b/component/languages/site/en-GB.com_admirorgallery.ini
@@ -2,6 +2,10 @@ AG_APPLY DESC=APPLY<br />alt+a
 AG_RESET DESC=RESET<br />alt+r
 
 #Image Manager
+SHOW SIDEBAR=Show Sidebar
+HIDE SIDEBAR=Hide Sidebar
+PREVIOUS IMAGE=Previous Image
+NEXT IMAGE=Next Image
 GALLERIES=Galleries
 LEGEND=Legend
 CURRENT FOLDER:=Current Folder:
@@ -73,6 +77,7 @@ NO FOLDER SELECTED.=No folder selected.
 #Back-End Button
 AG_FOLDERS=Folders
 AG_PARAMETERS=Parametes
+SELECT FOLDER:=Select Folder:
 
 
 # Plugin Params
