Unstable version! Optimisation of sorting using values from XML in progress

--- a/component/languages/admin/en-GB.com_admirorgallery.ini
+++ b/component/languages/admin/en-GB.com_admirorgallery.ini
@@ -114,8 +114,18 @@ IMG WIDTH=Width
 IMG HEIGHT=Height
 IMG TYPE=Type
 IMG SIZE=Size
-IMAGE HAS THUMBNAIL CREATED.=Image has thumbnail created.
-IMAGE HAS ADDITIONAL DETAILS SAVED.=Image has additional details saved.
+NONE=None
+DELETE=Delete
+COPY TO=Copy to
+MOVE TO=Move to
+BOOKMARK=Bookmark
+SHOW=Set to Visible
+HIDE=Set to Hidden
+VISIBILE=Visibile
+HIDDEN=Hidden
+EDIT FOLDER CAPTIONS=Edit Folder Captions
+CLOSE FOLDER CAPTIONS=Close Folder Captions
+FOLDER THUMB=Folder Thumb
 
 #Errors and Notifications
 PARAMS UPDATED.=Params Updated.
