--- a/plg_admirorcolumnizer/lang/admin/en-GB.plg_content_admirorcolumnizer.ini
+++ b/plg_admirorcolumnizer/lang/admin/en-GB.plg_content_admirorcolumnizer.ini
@@ -3,9 +3,11 @@
 ; @author    	Igor Kekeljevic & Nikola Vasiljevski, 2011.
 ; @license		GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 
-PLG_CONTENT_ADMIRORCOLUMNIZER_XML_DESCRIPTION="<img src='../plugins/content/admirorcolumnizer/logo.jpg' /><br />This plugin is based on great jQuery library developed by Adam Wulf. More about Adam's Columnizer library you can found at <a href='http://welcome.totheinter.net/columnizer-jquery-plugin/' target='_blank' >Columnizer jQuery Plugin</a> webpage.<p>&nbsp;</p> Put text content You need to be in columns inside trigger code, for example: <b>{AC}<i>Your Content</i>{/AC}</b>.<p>&nbsp;</p>Place ACBR inside Your text to break text into next column.<p>&nbsp;</p>Find out more about Admiror Columnizer usage at <a target='_blank' href='http://www.admiror-design-studio.com/en/joomla-extensions/admiror-columnizer/manuals'>Admiror Columnizer Manual webpage</a>.<br/>Support for Admiror Columnizer is available at: <a target='_blank' href='http://www.vasiljevski.com/forum/index.php'>Admiror Joomla! Community</a>. <p>&nbsp;</p><a target='_blank' style='background-image:url(../plugins/content/admirorcolumnizer/support-projects.jpg); text-decoration: none; display:block; width:250px; height:120px;' href='http://www.admiror-design-studio.com/en/joomla-extensions/support-our-projects'> </a><p>&nbsp;</p>"
+PLG_CONTENT_ADMIRORCOLUMNIZER_XML_DESCRIPTION="<img src='../plugins/content/admirorcolumnizer/logo.jpg' /><br />Put text content You need to be in columns inside trigger code, for example: <b>{AC}<i>Your Content</i>{/AC}</b>.<p>&nbsp;</p>Place ACBR inside Your text to break text into next column.<p>&nbsp;</p>Find out more about Admiror Columnizer usage at <a target='_blank' href='http://www.admiror-design-studio.com/en/joomla-extensions/admiror-columnizer/manuals'>Admiror Columnizer Manual webpage</a>.<br/>Support for Admiror Columnizer is available at: <a target='_blank' href='http://www.vasiljevski.com/forum/index.php'>Admiror Joomla! Community</a>. <p>&nbsp;</p><a target='_blank' style='background-image:url(../plugins/content/admirorcolumnizer/support-projects.jpg); text-decoration: none; display:block; width:250px; height:120px;' href='http://www.admiror-design-studio.com/en/joomla-extensions/support-our-projects'> </a><p>&nbsp;</p>This plugin using great javascript library Hyphenation.js. For more informations about this library visit <a href='http://code.google.com/p/hyphenator/' target='_blank' >Hyphenation.js</a> webpage.<p>&nbsp;</p>"
 
-AC_COLUMNS_LABEL="Number of Columns"
-AC_COLUMNS_DESC="Enter number of columns."
+AC_TEXTALIGN_LABEL="Text Align"
+AC_TEXTALIGN_DESC="Select text align style."
 AC_SPACING_LABEL="Columns Spacing"
 AC_SPACING_DESC="Enter spacing between columns."
+AC_HYPHENATOR_LABEL="Hyphenator"
+AC_HYPHENATOR_DESC="Enable Hyphenator script."
