--- a/com_admirorgallery_4/com_admirorgallery/admirorbutton/language/en-GB/en-GB.plg_editors-xtd_admirorbutton.ini
+++ b/com_admirorgallery_4/com_admirorgallery/admirorbutton/language/en-GB/en-GB.plg_editors-xtd_admirorbutton.ini
@@ -1,4 +1,4 @@
-; @version      4.0
+; @version      4.5
 ; @package      Admiror Gallery (plugin)
 ; @copyright    Copyright (C) 2010 - 2011. All rights reserved.
 ; @author       Igor Kekeljevic & Nikola Vasiljevski, 2011.
@@ -6,4 +6,4 @@
 ; @note         All ini files need to be saved as UTF-8
 
 ; Plugin Description
-PLG_EDITORS-XTD_ADMIRORBUTTON = "Admiror Gallery"
+plg_editors-xtd_admirorbutton = "Button - Admiror Gallery"
