Changed DS to DIRECTORY_SEPARATOR because DS is removed in future Joomla releases Improved XML data getting Added missing includes Fixed wrong versions in some files headers Added missing translations Added Header title display on Layout pages

--- a/com_admirorgallery_4/com_admirorgallery/admirorgallery/language/en-GB/en-GB.plg_content_admirorgallery.ini
+++ b/com_admirorgallery_4/com_admirorgallery/admirorgallery/language/en-GB/en-GB.plg_content_admirorgallery.ini
@@ -79,3 +79,5 @@ AG_CANNOT_CREATE_THUMBNAILS_WIDTH_AND_HEIGHT_MUST_BE_GREATER_THEN_0="Cannot crea
 AG_CANNOT_READ_THUMBNAIL="Cannot read thumbnail: &#34;%s&#34;!"
 AG_CANNOT_CREATE_THUMBS_PERMMISIONS_ERROR="Admiror Gallery cannot create thumbnails in %s <br/>Check folder permmisions!"
 AG_AUTHORS="author/s"
+AG_NEXT="Next"
+AG_PREV="Prev"
