--- a/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
+++ b/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
@@ -154,3 +154,6 @@ AG_IGNORE_INVALID_IMAGE_DESC="Ignores errors if image is corrupted."
 AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS="Ignore notice of recoverable errors"
 AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS_DESC="If you get Notice: imagecreatefromjpeg() [function.imagecreatefromjpeg] you can stop this notice from appering on your page."
 ; Plugin Errors
+
+AG_NEXT="Next"
+AG_PREV="Prev"
