Updated lang files Thanks to ankris

--- a/com_admirorgallery_4/com_admirorgallery/site/language/nl-NL/nl-NL.com_admirorgallery.ini
+++ b/com_admirorgallery_4/com_admirorgallery/site/language/nl-NL/nl-NL.com_admirorgallery.ini
@@ -131,7 +131,7 @@ AG_NEW_IMAGE_DAYS_LIMIT_DESC="Limiet, in dagen, dat een afbeelding als nieuw bes
 
 AG_PAGINATION_SETTINGS="<b>PAGINATIE INSTELLINGEN</b>"
 AG_USE_PAGINATION="Gebruik paginatie"
-AG_USE_PAGINATION_DESC="Activeer het paginatiesysteem. Het afbeeldingen van het huidige album worden gegroepeerd op pagina's en er worden paginalinks aangemaakt."
+AG_USE_PAGINATION_DESC="Activeer het paginatiesysteem. De afbeeldingen van het huidige album worden gegroepeerd op pagina's en er worden paginalinks aangemaakt."
 AG_IMAGES_PER_GALLERY="Aantal afbeeldingen per galerij"
 AG_IMAGES_PER_GALLERY_DESC="Geef het aantal afbeeldingen per galerij op."
 
