--- a/com_admirorgallery_4/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
+++ b/com_admirorgallery_4/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
@@ -1,23 +1,95 @@
 COM_ADMIRORGALLERY_APPLY_DESC="Apply"
 COM_ADMIRORGALLERY_RESET_DESC="Reset"
 
+; Plugin Params
+AG_BASIC_SETTINGS="<b>BASIC SETTINGS</b>"
+AG_IMAGES_ROOT_FOLDER="Images Root Folder"
+AG_IMAGES_ROOT_FOLDER_DESC="Set the path to the folder you keep your images, relative to your site root. Default value is /images/sampledata."
+AG_THUMBNAIL_WIDTH="Thumbnail width"
+AG_THUMBNAIL_WIDTH_DESC="Set the maximum thumbnail width in pixels."
+AG_THUMBNAIL_HEIGHT="Thumbnail height"
+AG_THUMBNAIL_HEIGHT_DESC="Set the maximum thumbnail height in pixels."
+AG_THUMBNAIL_AUTO_SIZE="Thumbnail auto size"
+AG_THUMBNAIL_AUTO_SIZE_DESC="Auto size one of the dimensions (either width or height), keeping the proportions of the original image."
+AG_WIDTH="Width"
+AG_HEIGHT="Height"
+AG_NONE="None"
+AG_GALLERY_TEMPLATE="Gallery template"
+AG_GALLERY_TEMPLATE_DESC="Select a gallery template."
+AG_POPUP_ENGINE="Popup engine"
+AG_POPUP_ENGINE_DESC="Select a popup type."
+AG_ARRANGE_IMAGES_BY="Arrange images by"
+AG_ARRANGE_IMAGES_BY_DESC="Select how the images should be sorted."
+AG_PRIORITY="Priority"
+AG_DATE="Date"
+AG_NAME="Name"
+AG_GALLERY_COLORS="<b>GALLERY COLORS</b>"
+AG_GALLERY_BACKGROUND_COLOR="Background Color"
+AG_GALLERY_BACKGROUND_COLOR_DESC="This color is used as background color in templates. Only a 6 digit hex code is allowed."
+AG_GALLERY_FOREGROUND_COLOR="Foreground Color"
+AG_GALLERY_FOREGROUND_COLOR_DESC="This color is used for borders and text in templates. Only a 6 digit hex code is allowed."
+AG_GALLERY_HIGHLITE_COLOR="Highlite Color"
+AG_GALLERY_HIGHLITE_COLOR_DESC="Color used to highlite thumbnails when hovering over them. Only a 6 digit hex code is allowed."
+AG_GALLERY_FRAME_SIZE="<b>GALLERY FRAME SIZE</b>"
+AG_GALLERY_FRAME_WIDTH="Frame width"
+AG_GALLERY_FRAME_WIDTH_DESC="Adjust gallery frame width in pixels."
+AG_GALLERY_FRAME_HEIGHT="Frame height"
+AG_GALLERY_FRAME_HEIGHT_DESC="Adjust gallery frame height in pixels."
+AG_NEW_IMAGES_SETTINGS="<b>NEW IMAGES</b>"
+AG_MARK_NEW_IMAGES="Mark new images"
+AG_MARK_NEW_IMAGES_DESC="Adds a small ''new'' banner to thumbnails for a limited period of time."
+AG_YES="Yes"
+AG_NO="No"
+AG_NEW_IMAGE_DAYS_LIMIT="New image limit in days"
+AG_NEW_IMAGE_DAYS_LIMIT_DESC="Period, in days, in which an image is considered new."
+AG_PAGINATION_SETTINGS="<b>PAGINATION SETTINGS</b>"
+AG_USE_PAGINATION="Use Pagination"
+AG_USE_PAGINATION_DESC="Activate pagination system. Places a given number of images on a page and generates pagination links at the bottom."
+AG_IMAGES_PER_GALLERY="Images per gallery"
+AG_IMAGES_PER_GALLERY_DESC="Enter the number of images to show on a gallery page."
+AG_ALBUMS_SETTINGS="<b>ALBUMS SETTINGS</b>"
+AG_USE_ALBUMS="Use Albums"
+AG_USE_ALBUMS_DESC="Activate the album system. This option, recursively, renders each subfolder of the current gallery as an album."
+AG_ADDITIONAL_SETTINGS="<b>ADDITIONAL SETTINGS</b>"
+AG_SHOW_SIGNATURE="Show signature"
+AG_SHOW_SIGNATURE_DESC="Shows the Admiror Gallery label at the bottom of an article, if it contains a gallery."
+AG_USE_PLAIN_TEXT_CAPTIONS="Plain text captions"
+AG_USE_PLAIN_TEXT_CAPTIONS_DESC="It''s possible to use rich text captions. Avoid using avoid double quotes in tags. There's a risk some templates or popups don''t support rich text captions."
+AG_IGNORE_INVALID_IMAGE="Ignore invalid image"
+AG_IGNORE_INVALID_IMAGE_DESC="Ignores errors if image is corrupted."
+AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS="Ignore notice of recoverable errors"
+AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS_DESC="This setting stops the notice ''imagecreatefromjpeg() [function.imagecreatefromjpeg]'' from appering on your page."
+
+; Templates & Popups Manager
+AG_SELECT_TEMPLATE_TO_INSTALL="Select ZIP package to install"
+AG_TITLE="Title"
+AG_ID="ID"
+AG_DESCRIPTION="Description"
+AG_VERSION="Version"
+AG_DATE="Date"
+AG_AUTHOR="Author"
+AG_UNDATED="Undated"
+AG_UNKNOWN_AUTHOR="Unknown author"
+AG_UNKNOWN_VERSION="Unknown version"
+AG_NO_DESCRITION="No description"
+
 ;Image Manager
-AG_SHOW_SIDEBAR="Show Sidebar"
-AG_HIDE_SIDEBAR="Hide Sidebar"
-AG_PREVIOUS_IMAGE="Previous Image"
-AG_NEXT_IMAGE="Next Image"
-AG_IMAGE_DETAILS_FOR_FILE="Image Details for file:"
+AG_SHOW_SIDEBAR="Show sidebar"
+AG_HIDE_SIDEBAR="Hide sidebar"
+AG_PREVIOUS_IMAGE="Previous image"
+AG_NEXT_IMAGE="Next image"
+AG_IMAGE_DETAILS_FOR_FILE="Image details for file:"
 AG_GALLERIES="Galleries"
 AG_LEGEND="Legend"
 AG_CURRENT_FOLDER="Current Folder:"
-AG_OPERATION_WITH_SELECTED_ITEMS="Operation With Selected Items:"
+AG_OPERATION_WITH_SELECTED_ITEMS="Operation with selected item(s):"
 AG_NONE="None"
 AG_UPLOAD_IMAGES_JPG_JPEG_GIF_PNG_OR_ZIP="Upload images (jpg, jpeg, gif, png or zip)"
 AG_MAX="Max"
 AG_CREATE_FOLDERS="Create folders:"
 AG_ADD="Add"
 AG_SELECTED_ITEMS_WILL_BE_DELETED="Selected items will be deleted!"
-AG_SELECT_FILE_OR_FOLDER="Select File Or Folder."
+AG_SELECT_FILE_OR_FOLDER="Select file or folder."
 AG_IMAGE_HAS_THUMBNAIL_CREATED="Image has thumbnail created."
 AG_IMAGE_HAS_ADDITIONAL_DETAILS_SAVED="Image has additional details saved."
 AG_IMG_WIDTH="Width"
@@ -29,51 +101,49 @@ AG_DELETE="Delete"
 AG_COPY_TO="Copy to"
 AG_MOVE_TO="Move to"
 AG_BOOKMARK="Bookmark"
-AG_SHOW="Set to Visible"
-AG_HIDE="Set to Hidden"
-AG_VISIBLE="Visibile"
+AG_SHOW="Make visible"
+AG_HIDE="Make hidden"
+AG_VISIBLE="Visible"
 AG_HIDDEN="Hidden"
-AG_EDIT_FOLDER_CAPTIONS="Edit Folder Captions"
-AG_CLOSE_FOLDER_CAPTIONS="Close Folder Captions"
-AG_FOLDER_THUMB="Folder Thumb"
+AG_EDIT_FOLDER_CAPTIONS="Edit folder captions"
+AG_CLOSE_FOLDER_CAPTIONS="Close folder captions"
+AG_FOLDER_THUMB="Folder thumbnail"
 AG_SELECT_TO_REMOVE_BOOKMARK="Select to remove bookmark."
 
-
-
 ;Errors and Notifications
-AG_PARAMS_UPDATED="Params Updated."
-AG_CANNOT_ACCESS_TO_DATABASE="Cannot Access to Database."
+AG_PARAMS_UPDATED="Parameters updated."
+AG_CANNOT_ACCESS_TO_DATABASE="Cannot access database."
 AG_PACKAGE_REMOVED="Package removed."
 AG_PACKAGE_CANNOT_BE_REMOVED="Package cannot be removed:"
-AG_ZIP_PACKAGE_IS_INSTALLED="ZIP package is installed:"
-AG_ZIP_PACKAGE_IS_NOT_VALID_RESOURCE_TYPE="ZIP package is not valid resource type:"
+AG_ZIP_PACKAGE_IS_INSTALLED="ZIP package was installed:"
+AG_ZIP_PACKAGE_IS_NOT_VALID_RESOURCE_TYPE="ZIP package is not a valid resource type:"
 AG_CANNOT_UPLOAD_FILE_TO_TEMP_FOLDER_PLEASE_CHECK_PERMISSIONS="Cannot upload file to temp folder. Please check permissions."
-AG_ONLY_ZIP_ARCHIVES_CAN_BE_INSTALLED="Only zip archives can be installed."
+AG_ONLY_ZIP_ARCHIVES_CAN_BE_INSTALLED="Only ZIP archives can be installed."
 AG_ZIP_PACKAGE_IS_UPLOADED_AND_EXTRACTED="ZIP package is uploaded and extracted:"
-AG_IMAGE_IS_UPLOADED="Image is uploaded:"
+AG_IMAGE_IS_UPLOADED="Image was uploaded:"
 AG_CANNOT_UPLOAD_FILE="Cannot upload file:"
 AG_AG_ONLY_JPG_JPEG_GIF_PNG_AND_ZIP_ARE_VALID_EXTENSIONS="Only jpg, jpeg, gif, png and zip are valid extensions."
 AG_IMAGE_RENAMED="Image renamed:"
 AG_CANNOT_RENAME_IMAGE="Cannot rename image:"
-AG_FILE_WITH_THE_SAME_NAME_ALREADY_EXISTS="File with the same name already exists."
+AG_FILE_WITH_THE_SAME_NAME_ALREADY_EXISTS="A duplicate filename was found."
 AG_FOLDER_RENAMED="Folder renamed:"
-AG_CANNOT_RENAME_FOLDER="Cannot rename Folder:"
-AG_FOLDER_WITH_THE_SAME_NAME_ALREADY_EXISTS="Folder with the same name already exists."
-AG_CAPTIONS_REMOVED_FROM_IMAGE_DETAILS_FILE="Captions removed from Image Details file."
-AG_CANNOT_REMOVE_CAPTIONS_FROM_IMAGE_DETAILS_FILE="Cannot remove captions from Image Details file."
-AG_NO_IMAGE_DETAILS_FILE_FOUNDED="No Image Details file founded:"
+AG_CANNOT_RENAME_FOLDER="Cannot rename folder:"
+AG_FOLDER_WITH_THE_SAME_NAME_ALREADY_EXISTS="Duplicate foldername found."
+AG_CAPTIONS_REMOVED_FROM_IMAGE_DETAILS_FILE="Captions removed from image."
+AG_CANNOT_REMOVE_CAPTIONS_FROM_IMAGE_DETAILS_FILE="Cannot remove captions from image."
+AG_NO_IMAGE_DETAILS_FILE_FOUNDED="No Image details found:"
 AG_NO_IMAGE_SELECTED="No image selected."
 AG_ITEM_COPIED="Item Copied:"
-AG_CANNOT_COPY_ITEM="Cannot Copy Item:"
-AG_ITEM_MOVED="Item Moved:"
-AG_CANNOT_MOVED_ITEM="Cannot Moved Item:"
+AG_CANNOT_COPY_ITEM="Cannot copy item:"
+AG_ITEM_MOVED="Item moved:"
+AG_CANNOT_MOVED_ITEM="Cannot move item:"
 AG_ITEM_DELETED="Item deleted:"
 AG_CANNOT_DELETE_ITEM="Cannot delete item:"
 AG_ITEM_DELETED="Item deleted:"
 AG_CANNOT_DELETE_ITEM="Cannot delete item:"
 AG_DESCRIPTION_FILE_CREATED="Description file created:"
 AG_CANNOT_WRITE_DESCRIPTION_FILE="Cannot write description file:"
-AG_PRIORITY_MUST_BE_NUMERIC_VALUE_FOR_IMAGE="Priority must be numeric value for image:"
+AG_PRIORITY_MUST_BE_NUMERIC_VALUE_FOR_IMAGE="Priority must be a numeric value:"
 AG_FOLDER_CREATED="Folder created:"
 AG_CANNOT_CREATE_FOLDER="Cannot create folder."
 AG_FOLDER_ALREADY_EXISTS="Folder already exists:"
@@ -85,75 +155,14 @@ AG_GALLERY_ADDED="Gallery added:"
 AG_CANNOT_WRITE_GALLERY_LISTING="Cannot write gallery listing:"
 AG_GALLERY_ALREADY_EXISTS="Gallery already exists:"
 AG_NO_FOLDER_SELECTED="No folder selected."
-AG_NO_FOLDERS_OR_IMAGES_FOUND_IN_CURRENT_FOLDER="No folders or images found in current folder ..."
+AG_NO_FOLDERS_OR_IMAGES_FOUND_IN_CURRENT_FOLDER="No folders or images where found in the current folder ..."
 AG_FOLDER_OR_IMAGE_NOT_FOUND="Folder or image not found.";
-
+COM_PLUGIN_NOT_INSTALLED="Admiror Gallery plugin is not installed! You need to install it to be able to use the component."
 
 ;Back-End Button
 AG_FOLDERS="Folders"
 AG_PARAMETERS="Parametes"
 AG_SELECT_FOLDER="Select Folder:"
-
-
-; Plugin Params
-AG_BASIC_SETTINGS="<b>BASIC SETTINGS</b>"
-AG_IMAGES_ROOT_FOLDER="Images Root Folder"
-AG_IMAGES_ROOT_FOLDER_DESC="Set the path to the folder you keep your images, relative to your site root. Default value is /images/stories/."
-AG_THUMBNAIL_WIDTH="Thumbnail Width"
-AG_THUMBNAIL_WIDTH_DESC="Adjust the maximum width thumbnail width in pixels."
-AG_THUMBNAIL_HEIGHT="Thumbnail Height"
-AG_THUMBNAIL_HEIGHT_DESC="Adjust the maximum image thumbnail height in pixels."
-AG_THUMBNAIL_AUTO_SIZE="Thumbnail Auto Size"
-AG_THUMBNAIL_AUTO_SIZE_DESC="Auto size for one of dimensions, keeping proportions of original image."
-AG_WIDTH="Width"
-AG_HEIGHT="Height"
-AG_NONE="None"
-AG_GALLERY_TEMPLATE="Gallery Template"
-AG_GALLERY_TEMPLATE_DESC="Select Gallery Template."
-AG_POPUP_ENGINE="Popup Engine"
-AG_POPUP_ENGINE_DESC="Select Popup Engine."
-AG_ARRANGE_IMAGES_BY="Arrange Images by"
-AG_ARRANGE_IMAGES_BY_DESC="Select one of image arrange algorithm."
-AG_PRIORITY="Priority"
-AG_DATE="Date"
-AG_NAME="Name"
-AG_GALLERY_COLORS="<b>GALLERY COLORS</b>"
-AG_GALLERY_BACKGROUND_COLOR="Background Color"
-AG_GALLERY_BACKGROUND_COLOR_DESC="This color is used for background in some templates. Enter 6 digit hex code only."
-AG_GALLERY_FOREGROUND_COLOR="Foreground Color"
-AG_GALLERY_FOREGROUND_COLOR_DESC="This color is used for borders and texts in some templates. Enter 6 digit hex code only."
-AG_GALLERY_HIGHLITE_COLOR="Highlite Color"
-AG_GALLERY_HIGHLITE_COLOR_DESC="This color is used for hover highlite in some templates. Enter 6 digit hex code only."
-AG_GALLERY_FRAME_SIZE="<b>GALLERY FRAME SIZE</b>"
-AG_GALLERY_FRAME_WIDTH="Frame Width"
-AG_GALLERY_FRAME_WIDTH_DESC="Adjust gallery frame width in pixels."
-AG_GALLERY_FRAME_HEIGHT="Frame Height"
-AG_GALLERY_FRAME_HEIGHT_DESC="Adjust gallery frame height in pixels."
-AG_NEW_IMAGES_SETTINGS="<b>NEW IMAGES</b>"
-AG_MARK_NEW_IMAGES="Mark New Images"
-AG_MARK_NEW_IMAGES_DESC="Adding small tag on image thumbnails for images old one week."
-AG_YES="Yes"
-AG_NO="No"
-AG_NEW_IMAGE_DAYS_LIMIT="New Image Days Limit"
-AG_NEW_IMAGE_DAYS_LIMIT_DESC="Set number of days for which image is consider as new."
-AG_PAGINATION_SETTINGS="<b>PAGINATION SETTINGS</b>"
-AG_USE_PAGINATION="Use Pagination"
-AG_USE_PAGINATION_DESC="Activate pagination system. It filter current set of images and generate pagination links."
-AG_IMAGES_PER_GALLERY="Images Per Gallery"
-AG_IMAGES_PER_GALLERY_DESC="Enter number of images per single gallery."
-AG_ALBUMS_SETTINGS="<b>ALBUMS SETTINGS</b>"
-AG_USE_ALBUMS="Use Albums"
-AG_USE_ALBUMS_DESC="Activate albums system. It filter child folders for current gallery and render them as albums with images."
-AG_ADDITIONAL_SETTINGS="<b>ADDITIONAL SETTINGS</b>"
-AG_SHOW_SIGNATURE="Show Signature"
-AG_SHOW_SIGNATURE_DESC="Show Admiror Gallery label on bottom of the page which using this plugin."
-AG_USE_PLAIN_TEXT_CAPTIONS="Plain Text Captions"
-AG_USE_PLAIN_TEXT_CAPTIONS_DESC="It''s possible to use rich text captions, but avoid using double qoutes in tag attributes. There is a risk that some Templates or Popups doesn''t support rich text captions."
-AG_IGNORE_INVALID_IMAGE="Ignore invalid image"
-AG_IGNORE_INVALID_IMAGE_DESC="Ignores errors if image is corrupted."
-AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS="Ignore notice of recoverable errors"
-AG_IGNORE_NOTICE_OF_RECOVERABLE_ERRORS_DESC="If you get Notice: imagecreatefromjpeg() [function.imagecreatefromjpeg] you can stop this notice from appering on your page."
-; Plugin Errors
 
 AG_NEXT="Next"
 AG_PREV="Prev"
