filelist and droplist updates language updates

--- a/com_avc/languages/en-GB/en-GB.com_avc.ini
+++ b/com_avc/languages/en-GB/en-GB.com_avc.ini
@@ -1,8 +1,12 @@
 COM_AVC="Views Creator"
 
+COM_AVC_UNCATEGORISED="Uncategorised Items"
+
 QUICK_ICON="Quick Icon"
-COM_AVC_HOME="Views Creator"
+COM_AVC_HOME="Views Creator Home"
 COM_AVC_QUICK_ICONS="Quick Icons"
+COM_AVC_EDITOR_CONFIG="Editor Config"
+COM_AVC_VIEWS_CONFIG="Views Config"
 
 COM_AVC_ADD="Add"
 COM_AVC_DUPLICATE="Duplicate"
@@ -22,6 +26,7 @@ COM_AVC_CLEAR="Clear"
 COM_AVC_CHECK_ALL="Check All"
 COM_AVC_SELECT="Select"
 COM_AVC_SELECT_NONE="Select None"
+COM_AVC_SAVEANDNEW="Save and Add New"
 
 COM_AVC_OK_STORE="Item is added"
 COM_AVC_ERROR_STORE="Cannot add new item"
@@ -44,24 +49,13 @@ COM_AVC_TOOLTIPS_TINYINT="Select True or False value from a droplist."
 COM_AVC_TOOLTIPS_DROPLIST="Select one of choises from a droplist."
 COM_AVC_TOOLTIPS_IMG="Enter image URL, placed inside site images folder."
 
-; Breadcrumb Menu
-COM_AVC_MENU="Navigation"
-COM_AVC_BREADCRUMBMENU_FILTER="Search items from Breadcrumb Menu bellow."
-
-AVC_DATABASES="AVC Databases Configuration"
-DEFAULT="Default"
-ACCESS="Access"
-DB_IMAGE="Database Image"
-PARENT_DB_ALIAS="Parent Database Alias"
-TEMPLATE_TABLE="Frontend Table Template"
-TEMPLATE_ROW="Frontend Row Template"
-
-AVC_ADMIN_FIELDS="AVC Fields Configuration"
-ORDERING="Ordering"
-DB_ALIAS="Database Alias"
-FLD_ALIAS="Database Field Alias"
-FLD_TYPE="Field Type"
-FLD_PARAMS="Field Type Parameters"
-
+; Personal notes
 AVC_NOTES="Personal Notes"
 AVC_NOTES_DESC="Notice: Personal Notes are stored in memory of currently used internet browser. Content of Personal Notes is different on different device or internet browser."
+
+; Custom Labels
+ORGANIZACIONA_STRUKTURA="Organizaciona struktura"
+ORGANIZACIJE="Organizacije"
+ORGANISATION="Organizacija"
+LJUDSKI_RESURSI="Ljudski resursi"
+FUNKCIONERI_U_TELIMA="Funkcioneri u telima"
