Generation process redone. Made sections of code, added comments, fixed fatal bug with deleting all content in database.

--- a/com_avc/languages/en-GB/en-GB.com_avc.ini
+++ b/com_avc/languages/en-GB/en-GB.com_avc.ini
@@ -27,6 +27,8 @@ COM_AVC_CHECK_ALL="Check All"
 COM_AVC_SELECT="Select"
 COM_AVC_SELECT_NONE="Select None"
 COM_AVC_SAVEANDNEW="Save and Add New"
+COM_AVC_MEDIA="Media Manager"
+COM_AVC_GENERATE="Generate"
 
 COM_AVC_OK_STORE="Item is added"
 COM_AVC_ERROR_STORE="Cannot add new item"
@@ -35,9 +37,19 @@ COM_AVC_ERROR_REPLACE="Cannot update selected item, with id"
 COM_AVC_OK_DELETE="Item is deleted from database, with id"
 COM_AVC_ERROR_DELETE="Cannot delete selected item, with id"
 COM_AVC_ERROR_NOSELECT="No item selected"
+COM_AVC_ERROR_GEN_MANDATORY_EMPTY="Some mandatory fields for Contents Generator are empty"
+COM_AVC_ERROR_GEN_SUCCESS="Generation proccess completed"
+COM_AVC_GENERATOR_NEEDED="Change of content detected. Press Generate button to update content."
+COM_AVC_GENERATOR_TOGGLE_TRUE="Autogenerate switched on."
+COM_AVC_GENERATOR_TOGGLE_FALSE="Autogenerate switched off."
+COM_AVC_ERROR_REMOVE_LOG_ERROR="Generation proccess error, cannot remove old Generator Log data"
+COM_AVC_ERROR_REMOVE_CONTENT_ERROR="Generation proccess error, cannot remove old content"
+COM_AVC_ERROR_MAKE_LOG_ERROR="Generation proccess error, cannot create new Generator Log data"
 
 COM_AVC_TABLE_FIELDS_ERROR="Some fields are empty. Submit anyway?"
 COM_AVC_CHANGE_ORDERING_NOTICE="Sorting operation requires table rows ascending order by ORDERING. Order rows by ORDERING now?"
+
+COM_AVC_GENERATOR_CONFIG="Contents Generator"
 
 ;Tooltips
 COM_AVC_TRUE="True"
@@ -59,3 +71,40 @@ ORGANIZACIJE="Organizacije"
 ORGANISATION="Organizacija"
 LJUDSKI_RESURSI="Ljudski resursi"
 FUNKCIONERI_U_TELIMA="Funkcioneri u telima"
+ISTORIJA_SAZIVA="Istorija saziva"
+ISTORIJA_FUNKCIJA="Istorija funkcija"
+FUNKCIJE="Funkcije"
+ORGANI_I_TELA="Organi i tela"
+ORGANIZACIONA_STRUKTURA="Organizaciona struktura"
+TITLE="Naziv"
+CATEGORY="Kategorija"
+ARTICLE="Članak"
+COUNTRY="Zemlja"
+TOWN="Naseljeno mesto"
+ADDRESS="Adresa"
+E_MAIL="Mejl"
+WEB="Sajt"
+PHONE="Telefon"
+ESTABLISHED="Datum osnivanja"
+ACTIVE="Aktivan"
+LAST_NAME="Prezime"
+FIRST_NAME="Ime"
+COMMITTEE="Upravno telo"
+DATE_START="Od datuma"
+DATE_END="Do datuma"
+COMMITTEE_HISTORICAL="Saziv"
+FUNCTION="Funkcija"
+PERSON="Osoba"
+PARENT="Matični"
+CHILD="Pripadajući"
+ALIAS="Alias"
+PUBLISH="Prikaži"
+DESCRIPTION="Opis"
+CAPACITY_BASIC="Osnovni kapacitet"
+CAPACITY_EXTENDED="Prošireni kapacitet"
+ACCOMMODATION="Smeštaj"
+PRICE="Cena"
+QUANTITY="Količina"
+SUPPER="Večera"
+SUPPER_PRICE="Cena večere"
+
