Port to 3.2.1 in progress...

--- a/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.ini
+++ b/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.ini
@@ -13,9 +13,8 @@ COM_ADMIRORGALLERY_TEMPLATES="Templates"
 COM_ADMIRORGALLERY_POPUPS="Popups"
 COM_ADMIRORGALLERY_IMAGE_MANAGER="Image manager"
 
-COM_ADMIRORGALLERY_APPLY_DESC="Apply"
-COM_ADMIRORGALLERY_RESET_DESC="Reset"
 COM_ADMIRORGALLERY_NOTICE_MUST_SELECT_FILE="No file selected"
+COM_ADMIRORGALLERY_ARE_YOU_SURE="Selected item(s) will be deleted"
 COM_ADMIRORGALLERY_MENU="Menu"
 
 COM_ADMIRORGALLERY_COMPONENT_VERSION="Component Version:"
@@ -127,6 +126,7 @@ AG_EDIT_FOLDER_CAPTIONS="Edit folder captions"
 AG_CLOSE_FOLDER_CAPTIONS="Close folder captions"
 AG_FOLDER_THUMB="Folder thumbnail"
 AG_SELECT_TO_REMOVE_BOOKMARK="Select to remove bookmark."
+AG_BOOKMARK_CHANGES_SAVED="Bookmark changed successfully"
 
 ;Errors and Notifications
 AG_PARAMS_UPDATED="Parameters updated."
