Port to 3.2.1 in progress...

--- a/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.sys.ini
+++ b/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.sys.ini
@@ -15,6 +15,12 @@ COM_ADMIRORGALLERY_IMAGE_MANAGER_DESC= "Image manager tool for image gallery."
 COM_ADMIRORGALLERY_LAYOUT = "Gallery layout"
 COM_ADMIRORGALLERY_LAYOUT_DESC = "Render gallery on page."
 
+COM_ADMIRORGALLERY_APPLY_DESC="Apply"
+COM_ADMIRORGALLERY_RESET_DESC="Reset"
+
+COM_ADMIRORGALLERY_TOOLBAR_APPLY="Save"
+COM_ADMIRORGALLERY_TOOLBAR_CANCEL="Cancel"
+
 ; Component Options
 COM_ADMIRORGALLERY_CONFIGURATION="Admiror Gallery Options"
 COM_ADMIRORGALLERY_CONFIGURATION_BASIC="Basic"
