--- a/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
+++ b/com_admirorgallery/site/language/en-GB/en-GB.com_admirorgallery.ini
@@ -1,6 +1,9 @@
 COM_ADMIRORGALLERY_APPLY_DESC="Apply"
 COM_ADMIRORGALLERY_RESET_DESC="Reset"
 
+COM_ADMIRORGALLERY_TOOLBAR_APPLY="Save"
+COM_ADMIRORGALLERY_TOOLBAR_CANCEL="Cancel"
+
 ; Plugin Params
 AG_BASIC_SETTINGS="<b>BASIC SETTINGS</b>"
 AG_IMAGES_ROOT_FOLDER="Images Root Folder"
