--- a/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.ini
+++ b/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.ini
@@ -17,6 +17,12 @@ COM_ADMIRORGALLERY_NOTICE_MUST_SELECT_FILE="No file selected"
 COM_ADMIRORGALLERY_ARE_YOU_SURE="Selected item(s) will be deleted"
 COM_ADMIRORGALLERY_MENU="Menu"
 
+COM_ADMIRORGALLERY_APPLY_DESC="Apply"
+COM_ADMIRORGALLERY_RESET_DESC="Reset"
+
+COM_ADMIRORGALLERY_TOOLBAR_APPLY="Save"
+COM_ADMIRORGALLERY_TOOLBAR_CANCEL="Cancel"
+
 COM_ADMIRORGALLERY_COMPONENT_VERSION="Component Version:"
 COM_ADMIRORGALLERY_PLUGIN_VERSION="Plugin Version:"
 COM_ADMIRORGALLERY_BUTTON_VERSION="Button Version:"
