Port to 3.2.1 in progress...

--- a/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.sys.ini
+++ b/com_admirorgallery/admin/language/en-GB/en-GB.com_admirorgallery.sys.ini
@@ -29,5 +29,6 @@ COM_ADMIRORGALLERY_CONFIGURATION_ADVANCED="Advanced"
 
 ;Component Front-End
 AG_ENTER_GALLERY_NAME="Enter gallery name"
+AG_ENTER_GALLERY_NAME_DESC="Gallery that the user will be able to modify using Image Manager"
 AG_SELECT_GALLERY="Select gallery"
 
